Add payment by bank card

--- a/Presentation/Store.Web/Store.Web.csproj
+++ b/Presentation/Store.Web/Store.Web.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\domain\store\store.csproj" />
+    <ProjectReference Include="..\..\plugins\Store.YandexKassa\Store.YandexKassa.csproj" />
     <ProjectReference Include="..\..\StoreMemory\StoreMemory.csproj" />
   </ItemGroup>
 
